fix order div css

--- a/index.html
+++ b/index.html
@@ -49,12 +49,25 @@
         </div>
     </div>
     <div class="order">
-        <div>
+        <div class="container">
             <h3>Pesquise o seu Hamburguer favorito!</h3>
-            <i class="fa-solid fa-magnifying-glass"> <input type="text"></i>
-        </div>
-        <div>
-            <input type="text"><i class="fa-solid fa-arrow-down"></i>
+            <div class="option">
+                <div class="search">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" placeholder="Digite o nome do Burguer">
+                </div>
+                <div class="selection">
+                    <select name="burgers" id="">
+                        <option class="placeh" value="">Selecionar categoria</option>
+                        <option value="texas-burger">Texas Burger</option>
+                        <option value="ohayo-burger">Ohayo Burger</option>
+                        <option value="kyoto-burger">Kyoto Burger</option>
+                        <option value="brazil-burger">Brazil Burger</option>
+                        <option value="toronto-burger">Toronto Burger</option>
+                        <option value="california-burger">California Burger</option>
+                    </select>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -75,60 +88,60 @@
                 </div>
                 <div class="burger-item">
                     <div class="top">
-                        <img src="./_assets/_pictures/Card-burger-1-1.png" alt="lanche">
-                    </div>
-                    <div class="bottom">
-                        <div>
-                            <p>Tradicional</p>
-                            <p>Texas Burger</p>
-                            <p>R$ 25,50</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="burger-item">
-                    <div class="top">
-                        <img src="./_assets/_pictures/Card-burger-1-1.png" alt="lanche">
-                    </div>
-                    <div class="bottom">
-                        <div>
-                            <p>Tradicional</p>
-                            <p>Texas Burger</p>
-                            <p>R$ 25,50</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="burger-item">
-                    <div class="top">
-                        <img src="./_assets/_pictures/Card-burger-1-1.png" alt="lanche">
-                    </div>
-                    <div class="bottom">
-                        <div>
-                            <p>Tradicional</p>
-                            <p>Texas Burger</p>
-                            <p>R$ 25,50</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="burger-item">
-                    <div class="top">
-                        <img src="./_assets/_pictures/Card-burger-1-1.png" alt="lanche">
-                    </div>
-                    <div class="bottom">
-                        <div>
-                            <p>Tradicional</p>
-                            <p>Texas Burger</p>
-                            <p>R$ 25,50</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="burger-item">
-                    <div class="top">
                         <img src="./_assets/_pictures/Card-burger-1-2.png" alt="lanche">
                     </div>
                     <div class="bottom">
                         <div>
                             <p>Tradicional</p>
                             <p>Texas Burger</p>
+                            <p>R$ 25,50</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="burger-item">
+                    <div class="top">
+                        <img src="./_assets/_pictures/Card-burger-2-3.png" alt=lanche>
+                    </div>
+                    <div class="bottom">
+                        <div>
+                            <p>Tradicional</p>
+                            <p>Texas Burger</p>
+                            <p>R$ 25,50</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="burger-item">
+                    <div class="top">
+                        <img src="./_assets/_pictures/Card-burger-2-4.png" alt="lanche">
+                    </div>
+                    <div class="bottom">
+                        <div>
+                            <p>Tradicional</p>
+                            <p>Texas Burger</p>
+                            <p>R$ 25,50</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="burger-item">
+                    <div class="top">
+                        <img src="./_assets/_pictures/card-burger-3-1.png" alt="lanche">
+                    </div>
+                    <div class="bottom">
+                        <div>
+                            <p>Tradicional</p>
+                            <p>Duplo Burger</p>
+                            <p>R$ 25,50</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="burger-item">
+                    <div class="top">
+                        <img src="./_assets/_pictures/Card-burger-4-1.png" alt="lanche">
+                    </div>
+                    <div class="bottom">
+                        <div>
+                            <p>Tradicional</p>
+                            <p>Cheese Burger</p>
                             <p>R$ 25,50</p>
                         </div>
                     </div>
